<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blood Report Analyser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newBloodTest">Analyse Blood Report</string>
    <string name="title_activity_blood_report_type">Blood Report Type</string>
    <string name="Select">Select the Type of Blood Test</string>
    <string name="glucose">Glucose Test</string>
    <string name="wb">Whiteblood Cell Test</string>
    <string name="haemo">Haemo globin Test</string>
    <string name="calcium">Calcium Test</string>
    <string name="chole">Cholesterol Test</string>
    <string name="liver">Liver Function Test</string>
    <string name="title_activity_analyse_options">Analyse Options</string>
    <string name="mode">Select the Mode</string>
    <string name="ti">Take an Image of the Report</string>
    <string name="manual">Manually Enter the Details</string>
    <string name="title_activity_glucose">Glucose Report</string>
    <string name="enter">Enter the details</string>
    <string name="age">Age</string>
    <string name="gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="fbs">Fasting Blood Sugar (FBS)</string>
    <string name="ppbs">Post Prandian Blood Sugar (PPBS)</string>
    <string name="rbs">Random Blood Sugar (RBS)</string>
    <string name="unit">mg/dl</string>
    <string name="analyse">Analyse Now</string>
    <string name="title_activity_result">Result</string>
    <string name="takemeback">Take Me Back to MainScreen</string>
    <string name="title_activity_contact_developer">Contact Developer</string>
    <string name="entermsg">Enter Your Message</string>
    <string name="send">Send</string>
    <string name="title_activity_rate">Rate Our App</string>
    <string name="reqrate">Please Rate Our App</string>
    <string name="title_activity_camera">Camera</string>
    <string name="takepic">Take the picture Now!</string>
    <string name="title_activity_haemoglobin">Haemoglobin Test</string>
    <string name="hb">HB</string>
    <string name="unit1">g/dl</string>
    <string name="title_activity_cholestrol">Cholestrol Test</string>
    <string name="triglycerides">Triglycerides</string>
    <string name="hdl">HDL Cholestrol</string>
    <string name="title_activity_calcium">Calcium Test</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="Serum">Serum Calcium</string>
    <string name="ionized">Serum Ionized Calcium</string>
    <string name="title_activity_liver">Liver Function Test</string>
    <string name="albumin">Albumin</string>
    <string name="bilirubin">Bilirubin</string>
    <string name="conjugated">Conjugated Bilirubin</string>
    <string name="title_activity_wbc">White Blood Cell Test</string>
    <string name="plat">Platelets</string>
    <string name="per_microlitre">per microlitre</string>
    <string name="lakhs_microlitre">lakhs/microlitre</string>
	<string name="monocytes">Monocytes (%)</string>
	<string name="Basophills">Basophills (%)</string>
	<string name="Eosinophils">Eosinophils (%)</string>
	<string name="Lymphocytes">Lymphocytes (%)</string>
	<string name="Neutrophils">Neutrophils (%)</string>
	<string name="Total_WBC_Count">Total WBC Count</string>
	<string name="title_activity_faq">FAQs</string>
	<string-array name="languages">
        <item>English</item>
        <item>Kannada</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
	<string name="kan">
	    (1) ಬ್ಲಡ್ ರಿಪೋರ್ಟ್ ಅನಲೈಸೆರ್ ಏನು?\n
		 - ಬ್ಲಡ್ ರಿಪೋರ್ಟ್ ಅನಲೈಸೆರ್, ರಕ್ತ ಪರೀಕ್ಷಾ ತಪಾಸಣೆಯ ವರದಿಯನ್ನು ಸಾಮಾನ್ಯ ಜನರು ಅರ್ಥ ಮಾಡಿಕೊಳ್ಳುವುದಕ್ಕಿರುವ ಒಂದು ಸಾಧನ.\n\n
		(2)ಬ್ಲಡ್ ರಿಪೋರ್ಟ್ ಅನಲೈಸೆರ್ ನಲ್ಲಿ ಯಾವೆಲ್ಲ ತರಹದ ರಕ್ತಪರೀಕ್ಷೆಯ ಬಗ್ಗೆ ತಿಳಿದುಕೊಳ್ಳಬಹುದು?\n
		 - ಒಟ್ಟೂ 6 ಬಗೆಯ ರಕ್ತಪರೀಕ್ಷೆಯ ಬಗ್ಗೆ ತಿಳಿದುಕೊಳ್ಳಬಹುದು.\n
		(i) ಮಧುಮೇಹ ಪರೀಕ್ಷೆ\n
		(ii) ಬಿಳಿರಕ್ತ ಕಣದ ಪರೀಕ್ಷೆ\n
		(iii) ಹಿಮೋಗ್ಲೋಬಿನ್ ನ ಪರೀಕ್ಷೆ\n
		(iv) ಯಕೃತ್ತಿನ ಪರೀಕ್ಷೆ\n
		(v) ಕ್ಯಾಲ್ಶಿಯಮ್ ನ ಪರೀಕ್ಷೆ\n
		(vi) ಕೊಲೆಸ್ಟರಾಲ್ ನ ಪರೀಕ್ಷೆ\n\n
	
		(3) ರಕ್ತಪರೀಕ್ಷಣಾ ವರದಿ ಏನನ್ನು ಸೂಚಿಸುತ್ತದೆ ಎಂದು ತಿಳಿಯುವುದು ಹೇಗೆ?\n
		- ಎರಡು ಬಗೆಯಲ್ಲಿ ತಿಳಿಯಬಹುದು.\n
		(1) ರಕ್ತಪರೀಕ್ಷಣಾ ವರದಿಯ ಚಿತ್ರವನ್ನು ಮೊಬೈಲಿನ ಕ್ಯಾಮೆರಾದಲ್ಲಿ ತೆಗೆಯಬೇಕು. ಆ ಚಿತ್ರದಲ್ಲಿರುವ ಸಂಖ್ಯೆಗಳನ್ನು ನಮ್ಮ ಅಪ್ಲಿಕೇಶನ್ ಗುರುತಿಸಿ, ವರದಿ ಏನು ಹೇಳುತ್ತದೆ ಎಂದು ಸಾಮಾನ್ಯರಿಗೂ ಅರ್ಥವಾಗುವಂತೆ ಹೇಳಲಾಗುತ್ತದೆ.\n
(2) ವರದಿ ನೋಡಿಕೊಂಡು ಬಿಟ್ಟ ಸ್ಥಳಗಳನ್ನು ತುಂಬಬೇಕು. ನಂತರ ನಮ್ಮ ಅಪ್ಲಿಕೇಶನ್ ನಿಮ್ಮ ವರದಿ ಏನನ್ನು ಸೂಚಿಸುತ್ತದೆ ಎಂದು ನಿಮಗೆ ಹೇಳುತ್ತದೆ.\n  
	</string>
    <string name="eng">
        (1)What does Blood Report Analyser Application do?\n
-This Application helps to analyse the Blood Report, and express the results in layman terms.\n\n

(2) What all type of Blood Report is Supported?\n
It supports 6 types of Blood Reports:\n
(1) Glucose Test (Sugar Test)\n
(2) White BloodCell Test\n
(3) Haemoglobin Test\n
(4) Calcium Test\n
(5) Cholestrol Test\n
(6) Liver Functionality Test\n\n

(3) How to use this App?\n
- There are two varieties by which the user can use the App.\n 
(i) Taking Picture of the Report: The user should take the Report of the Blood Report. The Application automatically extracts the text from that report and Analyses the Report and gives the results in an understandable format.\n

(ii) Manual Entry of the details: The user should manually enter the details from the blood report. Then the application analyses the Report and gives the results in an understandable format.\n\n

        
    </string>
	<string name="hin">
        (1)ब्लड रेपर्ट अनॅलाइसर क्या है?\n
		- ब्लड रेपर्ट अनॅलाइसर आपके रक्त जाच के विस्लेशन मे आपकी सहायता करता है.\n\n

		(2)ब्लड रेपर्ट अनॅलाइसर का इस्तेमाल कैसे करे?\n
		- ब्लड रेपर्ट अनॅलाइसर का इस्तेमाल बहुत ही सरल है. इसमे दिए गये अनलयसए बटन को टच करे और फिर अपने ज़रूरत के मुताबिक जाच को चुने. अब कमेरे से रिपोर्ट की फोटो ले या स्वयं पूर्ण जानकारिया भरे. तत पासचात् अनलाइज़ बटन को टच करे.आपकी रिपोर्ट की जानकारिया उप्लब्द है.\n\n

		(3) फोटो लेने के पासचात् भी जानकारी नही मिल रही, क्या करू?\n
		- शायद आपकी रिपोर्ट की फोटो साफ नही है. क्र्पया स्वयं सारी जानकारिया भरे.\n\n 

	विशेष नोट :\n अधिक जानकारी के लिए ब्लड रेपर्ट अनॅलाइसर का \"कॉंटॅक्ट अस\" बटन टच करे और अपनी परेशानिया को सुलझाने मे हमारी मदद ले. धन्यवाद.\n</string>
</resources>
